fix forgot p1 registry

--- a/.github/workflows/deploy-on-merge.yml
+++ b/.github/workflows/deploy-on-merge.yml
@@ -40,10 +40,10 @@ jobs:
         context: .
         push: true
         tags: |
-          registry.praksa.abhapp.com/spring-petclinic-rest:latest
-          registry.praksa.abhapp.com/spring-petclinic-rest:${{ steps.version.outputs.version }}
-          registry.praksa.abhapp.com/spring-petclinic-rest:${{ steps.version.outputs.short_sha }}
-        cache-from: type=registry,ref=registry.praksa.abhapp.com/spring-petclinic-rest:latest
+          registry.p1.praksa.abhapp.com/spring-petclinic-rest:latest
+          registry.p1.praksa.abhapp.com/spring-petclinic-rest:${{ steps.version.outputs.version }}
+          registry.p1.praksa.abhapp.com/spring-petclinic-rest:${{ steps.version.outputs.short_sha }}
+        cache-from: type=registry,ref=registry.p1.praksa.abhapp.com/spring-petclinic-rest:latest
         cache-to: type=inline
 
     - name: Image build summary
@@ -66,7 +66,7 @@ jobs:
 
     - name: Pull latest images
       run: |
-        docker pull registry.praksa.abhapp.com/spring-petclinic-rest:latest
+        docker pull registry.p1.praksa.abhapp.com/spring-petclinic-rest:latest
 
     - name: Deploy with docker-compose
       run: |
