fix: change registry to p1 in build step

--- a/.github/workflows/deploy-on-merge.yml
+++ b/.github/workflows/deploy-on-merge.yml
@@ -40,15 +40,15 @@ jobs:
         context: .
         push: true
         tags: |
-          registry.praksa.abhapp.com/spring-petclinic-rest:latest
-          registry.praksa.abhapp.com/spring-petclinic-rest:${{ steps.version.outputs.version }}
-          registry.praksa.abhapp.com/spring-petclinic-rest:${{ steps.version.outputs.short_sha }}
-        cache-from: type=registry,ref=registry.praksa.abhapp.com/spring-petclinic-rest:latest
+          registry.p1.praksa.abhapp.com/spring-petclinic-rest:latest
+          registry.p1.praksa.abhapp.com/spring-petclinic-rest:${{ steps.version.outputs.version }}
+          registry.p1.praksa.abhapp.com/spring-petclinic-rest:${{ steps.version.outputs.short_sha }}
+        cache-from: type=registry,ref=registry.p1.praksa.abhapp.com/spring-petclinic-rest:latest
         cache-to: type=inline
 
     - name: Image build summary
       run: |
-        echo "✅ Docker images built and pushed successfully"
+        echo "[OK] Docker images built and pushed successfully"
         echo "Tags:"
         echo "- latest"
         echo "- ${{ steps.version.outputs.version }}"
@@ -73,4 +73,4 @@ jobs:
         cd /home/ec2-user && docker-compose up -d backend
 
     - name: Deployment summary
-      run: echo "✅ Backend deployed successfully"
+      run: echo "[OK] Backend deployed successfully"
